--- a/UI/CCT.fxml
+++ b/UI/CCT.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -24,5 +25,15 @@
             <Font name="Comic Sans MS" size="50.0" />
          </font>
       </Label>
+      <Button layoutX="26.0" layoutY="24.0" mnemonicParsing="false" text="Einstellungen">
+         <font>
+            <Font name="Ebrima" size="15.0" />
+         </font>
+      </Button>
+      <Button layoutX="506.0" layoutY="24.0" mnemonicParsing="false" text="Schließen">
+         <font>
+            <Font name="Ebrima" size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
