--- a/UI/CTT_settings.fxml
+++ b/UI/CTT_settings.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="387.0" prefWidth="317.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -53,5 +53,7 @@
             <Font name="Ebrima" size="12.0" />
          </font>
       </TextField>
+      <Button layoutX="41.0" layoutY="317.0" mnemonicParsing="false" text="Statistiken" />
+      <Button layoutX="183.0" layoutY="317.0" mnemonicParsing="false" text="Hauptmenü" />
    </children>
 </AnchorPane>
