--- a/UI/CCT.fxml
+++ b/UI/CCT.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="626.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TableView layoutX="44.0" layoutY="94.0" prefHeight="518.0" prefWidth="232.0">
@@ -22,7 +21,7 @@
       </TableView>
       <Label layoutX="160.0" layoutY="14.0" text="Stundenpläne">
          <font>
-            <Font name="Comic Sans MS" size="50.0" />
+            <Font name="Ebrima" size="50.0" />
          </font>
       </Label>
       <Button layoutX="26.0" layoutY="24.0" mnemonicParsing="false" text="Einstellungen">
