--- a/CTT-Java/src/de/bmgamez/ui/CCT.fxml
+++ b/CTT-Java/src/de/bmgamez/ui/CCT.fxml
@@ -11,12 +11,12 @@
    <children>
       <TableView layoutX="44.0" layoutY="94.0" prefHeight="518.0" prefWidth="232.0">
         <columns>
-          <TableColumn prefWidth="231.0" text="Heute" />
+          <TableColumn id="heute" prefWidth="231.0" text="Heute" />
         </columns>
       </TableView>
       <TableView layoutX="357.0" layoutY="94.0" prefHeight="518.0" prefWidth="232.0">
          <columns>
-            <TableColumn prefWidth="231.0" text="Morgen" />
+            <TableColumn id="morgen" prefWidth="231.0" text="Morgen" />
          </columns>
       </TableView>
       <Label layoutX="160.0" layoutY="14.0" text="Stundenpläne">
