--- a/CTT-Java/src/de/bmgamez/ui/CCT.fxml
+++ b/CTT-Java/src/de/bmgamez/ui/CCT.fxml
@@ -7,16 +7,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="626.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="626.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.bmgamez.ui.Controller">
    <children>
-      <TableView layoutX="44.0" layoutY="94.0" prefHeight="518.0" prefWidth="232.0">
+      <TableView fx:id="tableView1" layoutX="44.0" layoutY="94.0" prefHeight="518.0" prefWidth="232.0">
         <columns>
-          <TableColumn id="heute" prefWidth="231.0" text="Heute" />
+          <TableColumn id="heute" fx:id="tableColumn1" editable="false" prefWidth="231.0" sortable="false" text="Heute" />
         </columns>
       </TableView>
-      <TableView layoutX="357.0" layoutY="94.0" prefHeight="518.0" prefWidth="232.0">
+      <TableView layoutX="368.0" layoutY="94.0" prefHeight="518.0" prefWidth="232.0">
          <columns>
-            <TableColumn id="morgen" prefWidth="231.0" text="Morgen" />
+            <TableColumn id="morgen" editable="false" prefWidth="231.0" sortable="false" text="Morgen" />
          </columns>
       </TableView>
       <Label layoutX="160.0" layoutY="14.0" text="Stundenpläne">
