--- a/UI/CTT_settings.fxml
+++ b/UI/CTT_settings.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="387.0" prefWidth="317.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField layoutX="99.0" layoutY="108.0" prefHeight="25.0" prefWidth="49.0">
+      <TextField layoutX="93.0" layoutY="119.0" prefHeight="25.0" prefWidth="49.0">
          <font>
             <Font name="Ebrima" size="12.0" />
          </font>
@@ -23,37 +23,47 @@
             <Font name="Ebrima" size="21.0" />
          </font>
       </Label>
-      <Label layoutX="51.0" layoutY="147.0" text="Tag">
+      <Label layoutX="45.0" layoutY="176.0" text="Tag">
          <font>
             <Font name="Ebrima" size="21.0" />
          </font>
       </Label>
-      <TextField layoutX="95.0" layoutY="150.0" prefHeight="25.0" prefWidth="57.0">
+      <TextField layoutX="89.0" layoutY="179.0" prefHeight="25.0" prefWidth="57.0">
          <font>
             <Font name="Ebrima" size="12.0" />
          </font>
       </TextField>
-      <Label layoutX="29.0" layoutY="182.0" text="Schule">
+      <Label layoutX="23.0" layoutY="211.0" text="Schule">
          <font>
             <Font name="Ebrima" size="21.0" />
          </font>
       </Label>
-      <TextField layoutX="95.0" layoutY="185.0" prefHeight="25.0" prefWidth="105.0">
+      <TextField layoutX="89.0" layoutY="214.0" prefHeight="25.0" prefWidth="105.0">
          <font>
             <Font name="Ebrima" size="12.0" />
          </font>
       </TextField>
-      <Label layoutX="48.0" layoutY="213.0" text="Path">
+      <Label layoutX="42.0" layoutY="242.0" text="Path">
          <font>
             <Font name="Ebrima" size="21.0" />
          </font>
       </Label>
-      <TextField layoutX="95.0" layoutY="216.0" prefHeight="25.0" prefWidth="152.0">
+      <TextField layoutX="89.0" layoutY="245.0" prefHeight="25.0" prefWidth="152.0">
          <font>
             <Font name="Ebrima" size="12.0" />
          </font>
       </TextField>
       <Button layoutX="41.0" layoutY="317.0" mnemonicParsing="false" text="Statistiken" />
       <Button layoutX="183.0" layoutY="317.0" mnemonicParsing="false" text="Hauptmenü" />
+      <Label layoutX="26.0" layoutY="149.0" text="Kurse">
+         <font>
+            <Font name="Ebrima" size="21.0" />
+         </font>
+      </Label>
+      <TextField layoutX="93.0" layoutY="150.0" prefHeight="25.0" prefWidth="49.0">
+         <font>
+            <Font name="Ebrima" size="12.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
