Actually Able to detect inputs

--- a/CTT_Final/PC/CTT_electron/views/index.html
+++ b/CTT_Final/PC/CTT_electron/views/index.html
@@ -30,14 +30,16 @@
         </table>
     </div>
     <div class="pre-bottom-nav">
-        <a href="javascript:hi()" class="first">Today</a>|
-        <a href="javascript:hi()" class="middle">Tomorow</a>
+        <a href="#" id="loadToday" class="first">Today</a>|
+        <a href="#" id="loadTomorrow" class="last">Tomorow</a>
     </div>
 
     <div class="bottom-nav">
-        <a href="javascript:hi();" class="first">Plan</a>|
-        <a href="javascript:hi()" class="middle">Stats</a>|
-        <a href="javascript:hi()" class="last">Settings</a>
+        <a href="#" id="openPlan" class="first">Plan</a>|
+        <a href="#" id="openStats" class="middle">Stats</a>|
+        <a href="#" id="openSettings" class="last">Settings</a>
     </div>
+
+        <script src="renderers/index.js"></script>
 </body>
 </html>
