--- a/CTT_Final/PC/CTT_electron/views/css/dark.css
+++ b/CTT_Final/PC/CTT_electron/views/css/dark.css
@@ -15,6 +15,10 @@ body {
     background-color: rgb(20, 20, 20);
 }
 
+tr:nth-child(uneven) {
+    background-color: inherit;
+}
+
 tr:nth-child(even) {
     background-color: rgb(59, 59, 59);
 }
