Resolved a spelling issue

--- a/CTT_Final/PC/CTT_electron/views/index.html
+++ b/CTT_Final/PC/CTT_electron/views/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="pre-bottom-nav">
         <a href="#" id="loadToday" class="first">Today</a>|
-        <a href="#" id="loadTomorrow" class="last">Tomorow</a>
+        <a href="#" id="loadTomorrow" class="last">Tomorrow</a>
     </div>
 
     <div class="bottom-nav">
