Did stuff again

--- a/CTT_Final/PC/CTT_electron/views/index.html
+++ b/CTT_Final/PC/CTT_electron/views/index.html
@@ -17,20 +17,20 @@
         <h1>Current Time Table</h1>
     </div>
 
-    <div class="table-container">
+    <div class="table-container" style="font-family: Ebrima">
         <table id="main-table" class="table">
             
         </table>
     </div>
     <div class="pre-bottom-nav">
-        <a href="#" id="loadToday" class="first">Today</a>|
-        <a href="#" id="loadTomorrow" class="last">Tomorrow</a>
+        <a href="#" id="loadToday" class="first">Heute</a>|
+        <a href="#" id="loadTomorrow" class="last">Morgen</a>
     </div>
 
     <div class="bottom-nav">
         <a href="#" id="openPlan" class="first">Plan</a>|
-        <a href="#" id="openStats" class="middle">Stats</a>|
-        <a href="#" id="openSettings" class="last">Settings</a>
+        <a href="#" id="openStats" class="middle">Statistiken</a>|
+        <a href="#" id="openSettings" class="last">Einstellungen</a>
     </div>
 
     <script src="renderers/index.js"></script>
